docker_services/kubernetes/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/codewithdan-network: "true"
        io.kompose.service: node
    spec:
      containers:
        - env:
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: docker-env-app-production-env
          image: edchelstephens/node-codewithdan
          name: node-codewithdan
          ports:
            - containerPort: 8080
          resources: {}
          workingDir: /var/www/codewithdan
      restartPolicy: Always
status: {}
